--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "core-js": "^3.8.3",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.12",
+    "jquery": "^3.6.1",
     "v-charts": "^1.19.0",
     "vue": "^2.6.14",
     "vue-amap": "^0.5.10",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
