--- a/carclub/src/main/resources/application.yml
+++ b/carclub/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     url: jdbc:mysql://localhost:3306/carclub1?serverTimezone=UTC
     username: root
     password: 123456
+  data:
+    neo4j:
+      uri: bolt://localhost:7687
+      username: neo4j
+      password: 12345678
+
   aop:
     proxy-target-class: true
     auto: true
